use symbol link to reference the template files and MakeNewSection.bat to make new section fold

--- a/.gitignore
+++ b/.gitignore
@@ -32,13 +32,13 @@
 *.blg
 *-blx.aux
 *-blx.bib
-*.run.xml
+**/*.run.xml
 
 ## Build tool auxiliary files:
 *.fdb_latexmk
 *.synctex
 *.synctex(busy)
-*.synctex.gz
+**/*.synctex.gz
 *.synctex.gz(busy)
 *.pdfsync
 *.rubbercache
